# Keepr

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  passman.spec  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_publish_docs.yml  build_and_release_executables.yml  main.yml  publish_to_pypi.yml
FAQs/: index.html
about/LICENSE/: index.html
command_reference/: index.html
command_reference/add/: index.html
command_reference/change_master/: index.html
command_reference/delete/: index.html
command_reference/logout/: index.html
command_reference/view/: index.html
docs/: FAQs.md  encryption.md  index.md  installation.md
docs/about/: contributing.md  support.md
docs/command_reference/: add.md  change_master.md  delete.md  help.md  index.md  list.md  login.md  logout.md  search.md  update.md  view.md
docs/user_guides/: configuration.md  getting_started.md
installation/: index.html
site/: index.html
site/about/contributing/: index.html
site/about/support/: index.html
site/command_reference/help/: index.html
site/command_reference/list/: index.html
site/command_reference/login/: index.html
site/command_reference/search/: index.html
site/command_reference/update/: index.html
site/encryption/: index.html
site/search/: search_index.json
src/keepr/: cli.py  config.py  db.py  password_generator.py  security.py  session.py
src/passman/: cli.py  config.py  db.py  password_generator.py  security.py  session.py
user_guides/configuration/: index.html
user_guides/getting_started/: index.html
