[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "Keepr"
version = "1.1.4"
authors = [
    {name="Ben Samarji", email="bensamarji5637@gmail.com"}
]
description = "Secure Command-Line Password Manager"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "click==8.3.0",
    "tabulate==0.9.0",
    "pyperclip==1.11.0",
    "sqlcipher3-wheels==0.5.5.post0",
    "cryptography>=46.0.3",
    "pyinstaller>=6.16.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
]
keywords = ["cli", "password manager", "cryptography", "developer tools", "open source", "security", "sqlcipher"]

[project.urls]
Repository = "https://github.com/bsamarji/Keepr"
Documentation = "https://bsamarji.github.io/Keepr/"
Issues = "https://github.com/bsamarji/Keepr/issues"

[project.scripts]
keepr = "keepr.cli:cli"
